--- a/privacy.html
+++ b/privacy.html
@@ -31,4 +31,4 @@
     <h2>Changes to This Policy</h2>
     <p>We may update this privacy policy from time to time. Any changes will be posted on this page.</p>
 </body>
-</html><
+</html>
