--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
     <p>This app does not use any third-party analytics, advertising, or data collection services.</p>
     
     <h2>Contact</h2>
-    <p>If you have any questions about this privacy policy, please contact us at: <strong>your-email@domain.com</strong></p>
+    <p>If you have any questions about this privacy policy, please contact us at: <strong>jama211@gmail</strong></p>
     
     <h2>Changes to This Policy</h2>
     <p>We may update this privacy policy from time to time. Any changes will be posted on this page.</p>
